[package]
name = "transaction-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-rpc-types-engine = "0.13.0"
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = "0.27.5"
hyper-util = { version = "0.1.11", features = ["full"] }
jsonrpsee = { version = "0.24.9", features = [
    "server",
    "http-client",
    "macros",
] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["decompression-full"] }
tower-util = "0.3.1"
