[package]
name = "tx-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-rpc-types-engine = "0.13.0"
clap = { version = "4.5.34", features = ["derive", "env"] }
eyre = "0.6.12"
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = "0.27.5"
hyper-util = { version = "0.1.11", features = ["full"] }
jsonrpsee = { version = "0.24", features = [
    "server",
    "http-client",
    "macros",
] }
paste = "1.0.15"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.6.2", features = ["decompression-full"] }
tower-util = "0.3.1"
